test/domains/bradc/modDomQuery.good
modDomMethod.chpl:14: error: illegal lvalue in assignment
